# hello-triangle

./: CMakeLists.txt
res/shaders/: fragmentShader.fs  vertexShader.vs
src/: glad.c  main.cpp
